design: input 기본 테두리 설정 수정

--- a/src/app/styles/input.css
+++ b/src/app/styles/input.css
@@ -1,7 +1,7 @@
 @layer base {
   input,
   textarea {
-    @apply border-none outline-none;
+    @apply outline-none;
   }
 
   input:focus-visible,
