design: 성공을 나타내는 초록색상 추가

--- a/src/app/styles/color.css
+++ b/src/app/styles/color.css
@@ -16,5 +16,6 @@
   --color-accent-light: #1f2937;
   --color-accent: #0f172a;
 
-  --color-error: '#D42B11';
+  --color-success: #19d04a;
+  --color-error: #d42b11;
 }
