--- a/src/app/styles/input.css
+++ b/src/app/styles/input.css
@@ -13,4 +13,12 @@
   textarea:focus {
     @apply outline-none;
   }
+
+  input[type='search']::-webkit-search-cancel-button {
+    display: none;
+  }
+
+  input[type='search']::-ms-clear {
+    display: none;
+  }
 }
